--- a/index.html
+++ b/index.html
@@ -124,10 +124,10 @@
 
       <div class="micropaywalpay">
         <div class="micro-paypal">
-          <img src="data/homeline.png" alt="homelineImage" loading="lazy" />
+          <img src="data/homeline.png" alt="homelineImage"  />
         </div>
         <div class="micro-paypal-mobile">
-          <img src="data/MobileSecond.png" alt="homelineImage" loading="lazy" />
+          <img src="data/MobileSecond.png" alt="homelineImage" />
         </div>
       </div>
     </div>
